--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Project specific
+Classify/delete
+Classify/ripe
+Classify/unripe
+ultralytics_crop
+*.avi
+*.mp4
+*.pt
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
